# vscode-clang-symlink-example

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  README.md  WORKSPACE  compile_commands.json
src/cli/: main.cpp
src/lib/: example.cpp  example.h  printer.cpp  printer.h
